Adding font awesome.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
   </head>
   <body ng-app="clientApp">
     <!--[if lte IE 8]>
