add sticky header route

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/slideshow.css">
+    <link rel="stylesheet" href="styles/sticky-header.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
@@ -58,6 +59,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/slideshow.js"></script>
         <script src="scripts/directives/slideshow.js"></script>
+        <script src="scripts/controllers/sticky-header.js"></script>
         <!-- endbuild -->
 </body>
 </html>
